Pequenas otimizações